# legal-case-retrieval

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: analysis.py  clarify.py  main.py  schemas.py
app/data/: legal_terms.json
deploy/: nginx.conf
docs/: HANDOFF.md  api_v1.md  data_design_v1.md  design_change_v2.md  design_change_v3.md  design_v1.md  product_v1.md  roadmap_v1.md
experiments/: 01_subset_filter.py  02_segment.py  03_build_corpus.py  04a_openai_batch.py  04b_llama_extract.py  04c_llama_gguf_extract.py  05_build_index.py  06_make_evalset.py  07_eval.py  08_clean_ablation.py  09_build_term_map.py  10_hyde_ablation.py  11_relaxed_eval.py  12_regression_recall.py  poll_batch.py  probe_criminal_stats.py  probe_segments.py
experiments/results/: 02_segment.md  03_build_corpus.md  03_build_corpus_v2.md  07_retrieval_ablation.md  11_relaxed_eval.md
mock/: README.md  case.json  clarify.json  health.json  search.json  stats.json  trace.json
src/lcr/: config.py
src/lcr/data/: filter.py  segment.py
src/lcr/eval/: __init__.py  hyde.py  query_gen.py  text_clean.py
src/lcr/extract/: __init__.py  openai_extractor.py  regex_extractor.py  schemas.py
src/lcr/retrieval/: case_store.py  indexer.py  kind_classifier.py  searcher.py
tests/: test_api_analysis.py  test_api_endpoints.py  test_case_store.py  test_filter.py  test_regex_extractor.py  test_retrieval.py.bak  test_segment.py
