[project]
name = "lcr"
version = "0.1.0"
description = "法律判決類案搜尋系統 — 從口語事由檢索台灣刑事判決相似案例 (Legal Case Retrieval, RAG)"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.41.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# 實驗階段才裝的重套件（embedding / 檢索），先分組避免一開始裝太重
# torch/torchvision/transformers 釘穩定組合（BGE-M3 黃金版本），避免被自動升到
# torch 2.12 / transformers v5 導致 torchvision ABI、API 不相容而無法載入。
retrieval = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "transformers==4.49.0",
    "FlagEmbedding==1.3.4",
    "chromadb>=0.5",
    "bm25s>=0.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "httpx>=0.27",
]
# 要素抽取（LLM）
extract = [
    "openai>=2.0",
    "transformers==4.49.0",
    "accelerate>=0.30",
]
# FastAPI 後端（工程階段）
api = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

# torch / torchvision 走 PyTorch CUDA 12.1 官方 index（RTX 3060 Ti 相容、生態成熟）
[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/lcr"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
